--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "jwt": {
+    "secret": "F-JaNdRfUserjd89#5*6Xn2r5usErw8x/A?D(G+KbPeShV",
+    "issuer": "https://localhost:44314/",
+    "audience": "https://localhost:44314/",
+    "accessTokenExpiration": 5,
+    "refreshTokenExpiration": 10
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=Localhost;Database=jwt;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
